kubernetes/apps/default/tvarr/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tvarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: tvarr
      app.kubernetes.io/name: tvarr
  egressDeny:
    - toCIDR:
        - "::/0"
